# st-swagger-ui

./: .gitignore  BUILD_SUMMARY.md  CHANGES.md  MANIFEST.in  README.md  example.py  pyproject.toml  test_all_defaults.py  test_defaults.py  test_final_defaults.py  test_try_it_out.py  test_width.py
st_swagger_ui/: .gitignore  __init__.py  streamlit-component.toml
st_swagger_ui/frontend/: .gitignore  package.json  vite.config.ts
st_swagger_ui/frontend/src/: index.tsx  swagger-ui-overrides.css
