[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "st_swagger_ui"
version = "0.0.1"
description = "swagger ui for streamlit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "qu xiaowei", email = "quxw.work@gmail.com" }]
dependencies = ["streamlit >= 1.51"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["st_swagger_ui*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
st_swagger_ui = ["frontend/build/**/*", "pyproject.toml"]

[project.urls]
Homepage = "https://github.com/quxiaowei/st-swagger-ui"
Issues = "https://github.com/quxiaowei/st-swagger-ui/issues"
