[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "st_swagger_ui"
version = "0.1.0"
description = "Swagger UI for Streamlit"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "qu xiaowei", email = "quxw.work@gmail.com" }]
dependencies = ["streamlit >= 1.51"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

keywords = ["streamlit", "swagger", "openapi", "api", "documentation"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[project.urls]
Homepage = "https://github.com/quxiaowei/st-swagger-ui"
Repository = "https://github.com/quxiaowei/st-swagger-ui.git"
Issues = "https://github.com/quxiaowei/st-swagger-ui/issues"

[tool.hatch.build.targets.wheel]
packages = ["st_swagger_ui"]
exclude = [
  "**/.gitignore",
  "**/node_modules/**",
  "**/*.pyc",
  "**/__pycache__/**",
]

[tool.hatch.build.targets.wheel.force-include]
"st_swagger_ui/frontend/build" = "st_swagger_ui/frontend/build"
